# python-processrunner

./: .gitignore  .readthedocs.yaml  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.md  MANIFEST.in  ProcessRunner.py  README.md  README.rst  gitversion.py  make-dist.sh  processrunner-old.py  processrunner.py  pylama.ini  pyproject.toml  run-tests.sh  setup.cfg  setup.py
doc/: api.rst  code.rst  conf.py  examples.rst  index.rst
docs/: conf.py  convenience.rst  errata.rst  examples.rst  glossary.rst  index.rst  internals.rst
processrunner/: _Command.py  _PrPipe.py  __init__.py  command.py  commandmanager.py  content.py  contentwrapper.py  enum.py  exceptionhandler.py  kitchenpatch.py  priterator.py  processrunner.py  prpipe.py  prpipereader.py  prpipewriter.py  queuelink.py  runcommand.py  settings.py  ssh.py  which.py  writeout.py
resources/gitversion/: __init__.py  gitversion.py
src/processrunner/: __init__.py  classtemplate.py  command.py  commandmanager.py  contentwrapper.py  exceptionhandler.py  kitchenpatch.py  prenum.py  priterator.py  processrunner.py  prpipe.py  prpipereader.py  prpipewriter.py  queuelink.py  runcommand.py  ssh.py  timer.py  version.py  which.py  writeout.py
tests/: test-output-script.py
tests/content/: default_logging_config.ini  non-zero.sh  testing_logging_config.ini
tests/tests/: contentwrapper_test.py  context.py  processrunner_CommandNotFound_test.py  processrunner_chaining_test.py  processrunner_core_test.py  processrunner_iterator_test.py  processrunner_maplines_test.py  processrunner_stdin_test.py  processrunner_write_test.py  queuelink_test.py  runcommand_test.py  spinner.py  which_test.py  writeout_test.py
